--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.location.gps" />
 
-    <supports-screens android:resizeable="true"
-        android:smallScreens="true"
-        android:normalScreens="true" />
-
     <application
         android:allowBackup="true"
         android:largeHeap="true"
         android:icon="@drawable/app"
         android:label="@string/app_name"
+        android:theme="@style/d"
         android:supportsRtl="true"
         android:testOnly="false">
         <meta-data
@@ -32,14 +29,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity android:name=".SecondActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity android:name=".MyMap"
-            android:screenOrientation="portrait"/>
+            android:theme="@style/d"
+            android:screenOrientation="portrait" />
         <activity android:name=".About"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
